Gravitasjon kan gå oppover, og til høyre (med noe bugs)

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ hjelp til -kulebane formel- - Annen teknologi og vitenskap - Diskusjon.no.url
 FYSIKK - Formel for et legme i fritt fall - Skole og leksehjelp - Diskusjon.no.url
 Fall i tyngdefeltet - Matematikk R2 - NDLA.url
 falling - Kopi.cpp
+gmon.out
