--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ FYSIKK - Formel for et legme i fritt fall - Skole og leksehjelp - Diskusjon.no.u
 Fall i tyngdefeltet - Matematikk R2 - NDLA.url
 falling - Kopi.cpp
 gmon.out
+Makefile.win
+
